fix-align-center

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -9,7 +9,7 @@
     z-index: 4;
     justify-content: space-between;
     display: flex;
-    width: 55%;
+    width: 59%;
 }
 
 .heatmap-yaxis {
